<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/Theme.AppCompat"
    android:background="@color/brown"
    tools:context="com.example.jesus.readregister.App.LoginActivity">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:src="@drawable/livrosteladelogin" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
     <EditText
        android:id="@+id/editLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/escreva_o_seu_usuario" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/digite_a_sua_senha"/>

    </android.support.design.widget.TextInputLayout>



    <Switch
        android:onClick="logado"
        android:id="@+id/switch1"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:text="@string/manter_conectado" />
    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="login"
         />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_o_possui_cadastro"
            android:textSize="15sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastre_se"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:onClick="RealizarCadastro"
            />


    </LinearLayout>



</LinearLayout>
