<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/Theme.AppCompat"
    android:background="@color/brown"
    tools:context="com.example.jesus.readregister.App.Cadastro">



    <EditText
        android:id="@+id/editEmail"
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        tools:ignore="TextFields" />
    <EditText
        android:id="@+id/editSenha1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/editSenha2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_a_sua_senha_novamente"
        android:inputType="textPassword"/>


</LinearLayout>
